--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="stats-container">
-    <h1></h1>
+    <h1>Github Repo Stats</h1>
     <div id="repository-info"></div>
   </div>
   <script src="script.js"></script>
