Added the profile picture and link to the github account

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <body>
   <div id="stats-container">
     <h1>Github Repo Stats</h1>
-    <div id="repository-info"></div>
+    <div id="repository-info">
+      <div id="profile-info">
+        <img id="profile-picture" src="" alt="Profile Picture">
+        <h1 id="owner-name"></h1>
+      </div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
