--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GitHub Stats</title>
+  <title>GitHub Repo Stats</title>
   <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
