Modified the scrolling, initial-profile-image

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 <body>
   <div id="stats-container">
     <h1>Github Repo Stats</h1>
-    <div id="repository-info">
-      <div id="profile-info">
-        <img id="profile-picture" src="" alt="Profile Picture">
-        <h1 id="owner-name"></h1>
-      </div>
+    
+    <div id="profile-info">
+      <img id="profile-picture" src="Images/initial-profile.jpg" alt="Profile Picture">
+      <h1 id="owner-name"></h1>
     </div>
+
+    <div id="repository-info">
+      
+    </div>
+
   </div>
   <script src="script.js"></script>
 </body>
