--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
   <div id="stats-container">
     <h1>Github Repo Stats</h1>
     
+    <form id="owner-form">
+      <input type="text" id="owner-input" placeholder="GitHub username..." required>
+      <button type="submit">Fetch Stats</button>
+    </form>
+
     <div id="profile-info">
       <img id="profile-picture" src="Images/initial-profile.jpg" alt="Profile Picture">
       <h1 id="owner-name"></h1>
     </div>
 
     <div id="repository-info">
-      
+
     </div>
 
   </div>
